--- a/project.html
+++ b/project.html
@@ -13,18 +13,18 @@ is it looking awesome?????
 </head>
 <body>
 <h1>TOKYO GHOUL</h1>
-<image src="/storage/emulated/0/Dcoder/Image/d0bcca520c1b5edc0abea91200d345c5.jpg"/>
+<img src="/storage/emulated/0/Dcoder/Image/d0bcca520c1b5edc0abea91200d345c5.jpg"/>
 <p>Sometimes good people make bad choices. It doesn't mean they are bad people. It means they're human.
 
 
 </p>
-<image src="/storage/emulated/0/Dcoder/Image/a5c319e9acc5bc5ef5acfc18334ea06d.jpg"/>
+<img src="/storage/emulated/0/Dcoder/Image/a5c319e9acc5bc5ef5acfc18334ea06d.jpg"/>
 <p>The act of taking is equally evil. We, from the moment of birth, continue to take. Food, connections, even fellow blood. Living to the utmost. Continuing to slaughter, kill, take. Life is to constantly sin. Life is evil itself. I am aware I am evil…. And so are you all. Now, come kill me and, I shall do the same.</p>
-<image src="/storage/emulated/0/Dcoder/Image/b0ef4e1919e62eb114400e7cad4a192b.jpg"/>
+<img src="/storage/emulated/0/Dcoder/Image/b0ef4e1919e62eb114400e7cad4a192b.jpg"/>
 <p>You’re always unsteady, ready to slip at any moment. That’s why everybody can’t take their eyes off you.</p>
-<image src="/storage/emulated/0/Dcoder/Image/8116748fad5fb5e451473e0b6b1cbf32.jpg"/>
+<img src="/storage/emulated/0/Dcoder/Image/8116748fad5fb5e451473e0b6b1cbf32.jpg"/>
 <p>You don't need to blame yourself just because you've hurt someone, just like when you're walking you can't really blame yourself to crush some ants... that's what being stronger ones means.</p>
-<image src="/storage/emulated/0/Dcoder/Image/1.jpg"/>
+<img src="/storage/emulated/0/Dcoder/Image/1.jpg"/>
 <p>Why should I apologize for being a monster? Has anyone ever apologized for turning me into one?</p>
 </body>
 </html>
